--- a/Coffee Machine/Ingredient calculator/task-info.yaml
+++ b/Coffee Machine/Ingredient calculator/task-info.yaml
@@ -114,6 +114,12 @@ files:
         }
     }
   learner_created: false
+- name: src/machine/Coffee.kt
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/67/stages/361/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 03 Jun 2022 19:58:25 UTC
 record: -1
