--- a/Coffee Machine/Estimate the number of servings/task-info.yaml
+++ b/Coffee Machine/Estimate the number of servings/task-info.yaml
@@ -174,6 +174,12 @@ files:
         }
     }
   learner_created: false
+- name: src/machine/Coffee.kt
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/67/stages/362/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 03 Jun 2022 20:02:05 UTC
 record: -1
