--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -16,7 +16,7 @@ stages:
   is_completed: true
 - id: 363
   step: 5662
-  is_completed: false
+  is_completed: true
 - id: 364
   step: 5663
   is_completed: false
